# ch_wifi_monitor

./: .gitignore  README.md  main.py  pyproject.toml
ch_wifi_monitor/: db.py  speed.py  utils.py
data/: speed.json
